# grunt-haste-compiler

./: Gruntfile.js  LICENSE-MIT  README.md  package.json
tasks/: haste_compiler.js
test/: haste_compiler_test.js
test/fixtures/: ALibrary.hs  HelloWorld.hs  grunt-haste-compiler-test.cabal
